# forge

./: .gitmodules  AGENTS.md  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  NOTICE  PROVENANCE.md  README.md  THIRD_PARTY_LICENSES  UPSTREAM.md  forge.cpp
libraries/api/: CMakeLists.txt  README.md  binding.cpp  context.cpp  descriptor.cpp  dispatcher.cpp  error_projection.cpp  registry.cpp
libraries/api_transport/: CMakeLists.txt  README.md  client.cpp  connection.cpp  server.cpp
libraries/app/: CMakeLists.txt  README.md  application.cpp  application_builder.cpp  application_shell.cpp  daemon.cpp  diagnostics.cpp  events.cpp  plugin.cpp  plugin_context.cpp  plugin_registry.cpp  runner.cpp  signals.cpp  views.cpp
libraries/asio/: CMakeLists.txt  README.md  runtime.cpp  task_scheduler.cpp
libraries/config/: CMakeLists.txt  README.md  component.cpp  config.cpp  decode.cpp  document.cpp  key_path.cpp  migration.cpp
libraries/core/: CMakeLists.txt  README.md  chrono.cpp  encoding.cpp  git_revision.cpp.in  string.cpp  uint128.cpp  utf8.cpp
libraries/crypto/: CMakeLists.txt  README.md  _evp_digest.hpp  aes.cpp  asymmetric_encoding.cpp  asymmetric_keys.cpp  base32.cpp  base58.cpp  bigint.cpp  blake2.cpp  bls_private_key.cpp  bls_public_key.cpp  bls_signature.cpp  bls_utils.cpp  chacha20_poly1305.cpp  city.cpp  der.cpp  ed25519.cpp  encoding.cpp  hex.cpp  kdf.cpp  modular_arithmetic.cpp  openssl_backend.hpp  p256.cpp  pem.cpp  private_key.cpp  public_key.cpp  rand.cpp  random.cpp  ripemd160.cpp  rsa.cpp  secp256k1.cpp  secp256k1_backend.cpp  secp256k1_backend.hpp  secp256k1_common.cpp  secp256k1_recover.cpp  secret_bytes.cpp  sha1.cpp  sha224.cpp  sha256.cpp  (+6 more)
libraries/exceptions/: CMakeLists.txt  README.md  exceptions.cpp
libraries/http/: CMakeLists.txt  README.md  base_url.cpp  client.cpp  connection.cpp  file.cpp  middleware.cpp  range.cpp  route_context.cpp  router.cpp  router_server_access.cpp  server.cpp  stream.cpp  stream_server_access.cpp  target.cpp  types.cpp  upload.cpp
libraries/http_api/: CMakeLists.txt  README.md  http_api.cpp
libraries/json/: CMakeLists.txt  README.md  json.cpp
libraries/log/: CMakeLists.txt  README.md  appender.cpp  console_appender.cpp  log_message.cpp  logger.cpp  logger_config.cpp  record.cpp
libraries/multiformats/: CMakeLists.txt  README.md  address.cpp  multiaddr.cpp  multibase.cpp  multicodec.cpp  multihash.cpp  varint.cpp
libraries/objectdb/: CMakeLists.txt  README.md  snapshot.cpp  store.cpp  store_impl.cpp  transaction.cpp  write_gate.cpp
libraries/objectdb_rocksdb/: CMakeLists.txt  rocksdb.cpp
libraries/otlp/: CMakeLists.txt  README.md  crash.cpp  log_exporter.cpp  log_sink.cpp
libraries/p2p/: CMakeLists.txt  README.md  codec.cpp  connection_manager.cpp  connection_manager.hpp  dht.cpp  dht_query.hpp  direct_transport.cpp  direct_transport.hpp  endpoint.cpp  envelope.cpp  hole_punch.cpp  host_addresses.cpp  host_addresses.hpp  identify.cpp  identity.cpp  identity_signature.cpp  identity_signature.hpp  libp2p_tls.cpp  libp2p_tls.hpp  negotiation.cpp  node.cpp  node_helpers.hpp  node_impl.cpp  node_impl.hpp  node_impl_common.hpp  node_impl_hole_punch.hpp  node_impl_inbound.hpp  node_impl_maintenance.hpp  node_impl_paths.hpp  node_impl_relay.hpp  operation_deadline.cpp  operation_deadline.hpp  path_selector.cpp  path_selector.hpp  peer_exchange_codec.cpp  peer_exchange_codec.hpp  peer_store.cpp  protobuf.hpp  protocol_capabilities.hpp  (+20 more)
libraries/plugins/: CMakeLists.txt  README.md  node_signer.cpp  p2p_api_resolver.cpp  p2p_diagnostics.cpp  p2p_node.cpp  p2p_pubsub.cpp  signature_provider.cpp
libraries/program_options/: CMakeLists.txt  README.md  program_options.cpp
libraries/quic/: CMakeLists.txt  README.md  connection.cpp  connector.cpp  endpoint.cpp  framed_stream.cpp  libp2p.cpp  listener.cpp  options.cpp  quic_engine.cpp  quic_engine.hpp  runtime.cpp  security.cpp  stream.cpp  transport.cpp  wrapper_handles.hpp
libraries/raw/: CMakeLists.txt  README.md  datastream.cpp  raw.cpp  varint.cpp
libraries/rocksdb/: CMakeLists.txt  README.md  store.cpp  types.cpp
libraries/stcp/: CMakeLists.txt  README.md  connection.cpp  connector.cpp  listener.cpp
libraries/tcp/: CMakeLists.txt  README.md  connection.cpp  connector.cpp  listener.cpp  transport.cpp
libraries/transport/: CMakeLists.txt  README.md  buffer.cpp  connector.cpp  endpoint.cpp  frame.cpp  listener.cpp  registry.cpp  session.cpp  stream.cpp
libraries/transport_api/: CMakeLists.txt  README.md  client.cpp  connection.cpp  server.cpp
libraries/tui/: CMakeLists.txt  README.md  navigation.cpp  render.cpp  runner.cpp
plugins/: CMakeLists.txt  README.md  plugins.cpp
plugins/http_server/: CMakeLists.txt  api_facade.cpp  base_path.cpp  config.cpp  config_decode.cpp  middleware_bridge.cpp  plugin.cpp  plugin_impl.cpp  publication_api.cpp  publication_store.cpp  publisher_api.cpp  server_lifecycle.cpp  server_state.cpp
plugins/p2p_api_resolver/: CMakeLists.txt  config.cpp  descriptor_projection.cpp  implementation.cpp  plugin.cpp  plugin_impl.cpp  protocol.cpp  resolver_api.cpp
plugins/p2p_diagnostics/: CMakeLists.txt  config.cpp  diagnostics_api.cpp  plugin.cpp  plugin_impl.cpp  state.cpp
plugins/p2p_node/: CMakeLists.txt  api_facade.cpp  config.cpp  diagnostics_source.cpp  node_api.cpp  plugin.cpp  plugin_impl.cpp  pubsub_source.cpp
plugins/p2p_pubsub/: CMakeLists.txt  config.cpp  implementation.cpp  join_flow.cpp  message_projection.cpp  plugin.cpp  plugin_impl.cpp  subscription_api.cpp
plugins/secret_provider/: CMakeLists.txt  config.cpp  encrypted_file.cpp  plugin.cpp  plugin_impl.cpp  secret_api.cpp  source_loading.cpp
plugins/signature_provider/: CMakeLists.txt  api_facade.cpp  config.cpp  plugin.cpp  plugin_impl.cpp  signing_api.cpp
tests/: CMakeLists.txt
tests/api/: api_module_smoke_tests.cpp  api_tests.cpp  api_transport_tests.cpp  transport_api_tests.cpp
tests/app/: app_tests.cpp
tests/asio/: task_scheduler_tests.cpp
tests/config/: config_tests.cpp
tests/core/: test_chrono.cpp  test_encoding.cpp  test_escape_str.cpp
(+1014 files in other folders)
